2006-03-03  David Hampton  <hampton@employees.org>

	* numerous: Convert the account separator from a single character
	to a character string.  This allows multibyte unicode characters
	to be the account separator character. Fixes 333061.  Reworked a
	couple of routines that pull account names into their component
	parts.  Also fixed a bug in the new account dialog when creating
	multiple accounts at once.

2006-03-03  Derek Atkins  <derek@ihtfp.com>

	* configure.in: error out on g-wrap-1.3, gcc4, and error-on-warning.
	  Fixes #330615.

2006-03-02  Joshua Sled  <jsled@asynchronous.org>

	* src/gnc-ui.h: Fix SXEDITOR help target id.  Bug#128857.

2006-03-02  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/mt940/gnc-mt940-import.c: More work on mt940
	import. Completed #325170.

	* accounts/el_GR/*-xea: Greek account templates converted to
	UTF-8, by Nikos Charonitakis <nikosx@gmail.com>.

2006-03-02  David Hampton  <hampton@employees.org>

	* numerous: Move the storage for the account separator character
	into Account.c (default ':') and set it with an accessor function
	at startup and when it is changed in the preferences/gconf.
	Eliminate unnecessary passing around of the account separator
	character.

2006-03-01  David Hampton  <hampton@employees.org>

	* src/register/register-core/pricecell.c:
	* src/register/register-core/formulacell.c:
	* src/calculation/fin_spl_protos.h:
	* src/calculation/expression_parser.c:
	* src/app-utils/gnc-ui-util.[ch]:
	* src/app-utils/gnc-exp-parser.c: Convert all locations that parse
	input using the locale thousands/decimal point characters to use
	unicode functions.  This should allow multi-byte unicode
	characters to work as these separators on input.

	* src/app-utils/gnc-ui-util.c: Rework of Sylvain Defresne's patch
	to support multi-byte unicode thousands separator and decimal
	point characters when printing numbers.

2006-03-01  Derek Atkins  <derek@ihtfp.com>

	* src/report/standard-reports/transaction.scm: