@@ -59,6 +59,7 @@
 #include "config.h"
 
 #include <gtk/gtk.h>
+#include <glib/gi18n.h>
 #include <glade/glade.h>
 
 #include "dialog-utils.h"
@@ -111,6 +112,31 @@ typedef struct addition_t {
  *  dialog.  The data fields for this list are ::addition data
  *  structures. */
 GSList *add_ins = NULL;
+
+
+/** This function is called whenever the account separator is changed
+ *  in gconf.  It updates the label in the "Account" page of the
+ *  preferences dialog.
+ *
+ *  @internal
+ *
+ *  @param unused A pointer to the changed gconf entry.
+ *  
+ *  @param dialog A pointer to the preferences dialog.
+ */
+static void
+gnc_account_separator_prefs_cb (GConfEntry *unused, GtkWidget *dialog)
+{
+  GtkWidget *label;
+  gchar *sample;
+
+  label = gnc_glade_lookup_widget(dialog, "sample_account");
+  sample = g_strjoin(gnc_get_account_separator_string(),
+		     _("Income"), _("Salary"), _("Taxable"), NULL);
+  DEBUG(" Label set to '%s'", sample);
+  gtk_label_set_text(GTK_LABEL(label), sample);
+  g_free(sample);
+}
 
 
 /** This function compares two add-ins to see if they specify the same
@@ -983,6 +1009,77 @@ gnc_prefs_connect_currency_edit (GNCCurrencyEdit *gce)
 /**********/
 
 
+/** The user changed a gtk entry.  Update gconf.
+ *
+ *  @internal
+ *
+ *  @param entry A pointer to the entry that was changed.
+ *  
+ *  @param user_data Unused.
+ */
+static void
+gnc_prefs_entry_user_cb (GtkEntry *entry,
+			 gpointer user_data)
+{
+  const gchar *name, *text;
+
+  g_return_if_fail(GTK_IS_ENTRY(entry));
+  name = gtk_widget_get_name(GTK_WIDGET(entry)) + PREFIX_LEN;
+  text = gtk_entry_get_text(entry);
+  DEBUG("Entry %s set to '%s'", name, text);
+  gnc_gconf_set_string(name, NULL, text, NULL);
+}
+
+
+/** A gtk entry was updated in gconf.  Update the user visible dialog.
+ *
+ *  @internal
+ *
+ *  @param entry A pointer to the gtk entry that changed.
+ *
+ *  @param value The new value of the combo box.
+ */
+static void
+gnc_prefs_entry_gconf_cb (GtkEntry *entry,
+			  const gchar *value)
+{
+  g_return_if_fail(GTK_IS_ENTRY(entry));
+  ENTER("entry %p, value '%s'", entry, value);
+  g_signal_handlers_block_by_func(G_OBJECT(entry),
+				 G_CALLBACK(gnc_prefs_entry_user_cb),
+				 NULL);
+  gtk_entry_set_text(entry, value);
+  g_signal_handlers_unblock_by_func(G_OBJECT(entry),
+			   G_CALLBACK(gnc_prefs_entry_user_cb), NULL);
+  LEAVE(" ");
+}
+
+
+/** Connect a entry widget to the user callback function.  Set the
+ *  starting state of the entry from its value in gconf.
+ *
+ *  @internal
+ *
+ *  @param entry A pointer to the entry that should be connected.
+ */
+static void
+gnc_prefs_connect_entry (GtkEntry *entry)
+{
+  const gchar *name, *text;
+
+  g_return_if_fail(GTK_IS_ENTRY(entry));
+  name = gtk_widget_get_name(GTK_WIDGET(entry)) + PREFIX_LEN;
+  text = gnc_gconf_get_string(name, NULL, NULL);
+  gtk_entry_set_text(GTK_ENTRY(entry), text ? text : "");
+  DEBUG(" Entry %s set to '%s'", name, text);
+  g_signal_connect(G_OBJECT(entry), "changed",
+		   G_CALLBACK(gnc_prefs_entry_user_cb), NULL);
+}
+
+
+/**********/
+
+
 /** The user changed a GncPeriodSelect widget.  Update gconf.
  *  GncPeriodSelect choices are stored as an int.
  *
@@ -1235,6 +1332,9 @@ gnc_prefs_connect_one (const gchar *name,
   } else if (GTK_IS_COMBO_BOX(widget)) {
     DEBUG("  %s - combo box", name);
     gnc_prefs_connect_combo_box(GTK_COMBO_BOX(widget));
+  } else if (GTK_IS_ENTRY(widget)) {
+    DEBUG("  %s - entry", name);
+    gnc_prefs_connect_entry(GTK_ENTRY(widget));
   } else {
     DEBUG("  %s - unsupported %s", name,
 	  G_OBJECT_TYPE_NAME(G_OBJECT(widget)));
@@ -1305,6 +1405,8 @@ gnc_preferences_dialog_create(void)
   gtk_label_set_label(GTK_LABEL(label), currency_name);
   label = glade_xml_get_widget(xml, "locale_currency2");
   gtk_label_set_label(GTK_LABEL(label), currency_name);
+
+  gnc_account_separator_prefs_cb(NULL, dialog);
 
   LEAVE("dialog %p", dialog);
   return dialog;
@@ -1442,6 +1544,10 @@ gnc_preferences_gconf_changed (GConfClient *client,
       DEBUG("widget %p - combo_box", widget);
       gnc_prefs_combo_box_gconf_cb(GTK_COMBO_BOX(widget),
 				   gconf_value_get_int(entry->value));
+    } else if (GTK_IS_ENTRY(widget)) {
+      DEBUG("widget %p - entry", widget);
+      gnc_prefs_entry_gconf_cb(GTK_ENTRY(widget),
+			       gconf_value_get_string(entry->value));
     } else {
       DEBUG("widget %p - unsupported %s", widget,
 	    G_OBJECT_TYPE_NAME(G_OBJECT(widget)));
@@ -1523,8 +1629,12 @@ gnc_preferences_dialog (void)
 
   gnc_gconf_add_notification(G_OBJECT(dialog), NULL,
 			     gnc_preferences_gconf_changed);
+  gnc_gconf_general_register_cb(KEY_ACCOUNT_SEPARATOR,
+				(GncGconfGeneralCb)gnc_account_separator_prefs_cb,
+				dialog);
   gnc_register_gui_component(DIALOG_PREFERENCES_CM_CLASS,
 			     NULL, close_handler, dialog);
+
   LEAVE(" ");
 }
 
